<resources>
    <string name="app_name">Suraksha</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_setting">Setting</string>
    <string name="title_about">About</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="permissions">Location\nSMS\nRead Contacts\nInternet</string>
    <string name="mode">Hold Panic Button</string>
    <string name="perm_desc">* No Device Information is stored and transfer and mobile number is for Authentication purpose only.</string>


</resources>